[gd_scene load_steps=7 format=2]

[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Parallax.tscn" type="PackedScene" id=4]
[ext_resource path="res://MiniMap.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 2048.0

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" parent="Player" instance=ExtResource( 1 )]
zoom = Vector2( 5, 5 )

[node name="Parallax" parent="." instance=ExtResource( 4 )]

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MiniMap" parent="CanvasLayer" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.756863 )
margin_left = 860.782
margin_top = 438.349
margin_right = 1060.79
margin_bottom = 638.349
rect_scale = Vector2( 0.8, 0.8 )
player = NodePath("../../Player")
zoom = 2.5

[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
